Fixed a bug with overflow

--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
 html {
-	height: 100%;
+	overflow: hidden;
 }
 
 body {
-	height: 100%;
-
 	background: rgb(255, 216, 241);
 }
 
